nickel-lang-cli/tests/snapshot/snapshots/snapshot__query_stderr_query_non_record.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: tried to query field of a non-record
  ┌─ [INPUTS_PATH]/errors/query_non_record.ncl:3:1
  │
3 │ 1
  │ ^ tried to query field `value`, but the expression has type Number


